--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -44,7 +44,7 @@
     position: @Position;
     left: @LeftStyle;
     top: @TopStyle;
-    height: @HeightStyle;
+    height: @ControlHeightStyle;
     background-color: @BackgroundColor;
     z-index: @ZIndex;
     display: @DisplayStyle;
