--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -23,8 +23,8 @@
 <Styled @bind-Classname=@TextStyle>
     display: inline-block;
     position: @Position;
-    left: @CheckBoxTextXPositionStyle;
-    top: @CheckBoxTextYPositionStyle;
+    left: @CheckBoxTextXStyle;
+    top: @CheckBoxTextYStyle;
     z-index: @ZIndex;
 </Styled>
 <Styled @bind-Classname=@CheckBoxStyle>
