--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -54,8 +54,8 @@
                 <CheckBoxComponent Parent="this" Name="@item.Id.ToString()"
                     Unit="@Unit" HeightUnit="@HeightUnit"
                     Column1Width="@LabelWidth" Column2Width="@Width" CheckBoxValue="@item.ItemChecked"
-                    CheckBoxXPosition="@CheckBoxXPosition" CheckBoxYPosition="@CheckBoxYPosition"
-                    CheckBoxTextXPosition="@CheckBoxTextXPosition" CheckBoxTextYPosition="@CheckBoxTextYPosition"
+                    CheckBoxX="@CheckBoxX"
+                    CheckBoxTextX="@CheckBoxTextX" CheckBoxTextY="@CheckBoxTextY"
                     Height="@CheckBoxHeight" Width="@CheckBoxWidth" ControlHeight="@ListItemHeight"
                     ClassName="@ListItemClassName" Text="@item.Text" ExternalId="@item.Id"
                     BackgroundColor="@ListItemBackgroundColor.Name">
