--- a/ComboBox.razor
+++ b/ComboBox.razor
@@ -120,10 +120,10 @@
                     Position="@CheckedListPosition" Unit="@CheckedListUnit" Width=@CheckedListWidth 
                     ListItemWidth=@ListItemWidth  ListItemHeight="@ListItemHeight" ListItemLeft=@CheckedListItemLeft 
                     ListItemTop="@CheckedListItemTop" ListItemBackgroundColor=@ListItemBackgroundColor                    
-                    CheckBoxTextXPosition="@CheckBoxTextXPosition" CheckBoxTextYPosition="@CheckBoxTextYPosition"
+                    CheckBoxTextX="@CheckBoxTextX" CheckBoxTextY="@CheckBoxTextY"
                     Top="0" ZIndex="@ZIndexPlus10" ListItemMarginBottom="@ListItemMarginBottom"
                     NotifyParentOnBlur="true" CheckBoxHeight="@CheckBoxHeight" CheckBoxwidth="@CheckBoxWidth"
-                    CheckBoxXPosition=@CheckBoxXPosition  CheckBoxYPosition="@CheckBoxYPosition" 
+                    CheckBoxX=@CheckBoxX  CheckBoxY="@CheckBoxY" 
                     Left=@CheckedListLeft  ListItemClassName="@ListItemClassName"  ClassName="@CheckedListClassName">
                 </CheckedListBox>
             </div>                
