--- a/Sprite.razor
+++ b/Sprite.razor
@@ -7,8 +7,8 @@
     width: @WidthStyle;
     height: @HeightStyle;
     position: @Position;
-    top: @YPositionStyle;
-    left: @XPositionStyle;
+    top: @YStyle;
+    left: @XStyle;
     transform: scale(@Scale);
     transform-origin: left;
     display: @Display;
