--- a/ProgressBar.razor
+++ b/ProgressBar.razor
@@ -1,7 +1,7 @@
 ﻿@using BlazorStyled
 
 <Styled @bind-Classname="@TextPercentStyle">
-    color: @TextColor !important;
+    color: @TextColor.Name;
     height: 3vh;
     line-height: 3vh;
     font-size: 2.2vh;
