--- a/SaveCancelComponent.razor
+++ b/SaveCancelComponent.razor
@@ -18,15 +18,15 @@
 <div class="@ControlStyle displayinline">
     <div class="floatright">
         <ImageButton Name="SaveButton" Unit="px" HeightUnit="px" Height="@ButtonHeight" 
-            TextColor=@TextColor ButtonNumber="1" Parent="this"
+            TextColor=@TextColor ButtonNumber="1" Parent="this" ClassName="@SaveButtonClassName"
             Position="@Position" Left="@SaveButtonleft" Top=@ButtonTop
-            Width="@SaveButtonWidth" Text="Save" FontSize="@FontSize" FontName="Calibri"
+            Width="@SaveButtonWidth" Text="@SaveButtonText" FontSize="@FontSize" FontName="Calibri"
             ImageUrl="@SaveButtonImageUrl" ClickHandler="@ButtonClicked">
         </ImageButton>
         <ImageButton Name="CancelButton" Unit="px" HeightUnit="px" Height="@ButtonHeight" 
             TextColor=@TextColor ButtonNumber="2" Parent="this"
-            Position="@Position" Left="@CancelButtonLeft" Top=@ButtonTop
-            Width="@CancelButtonWidth" Text="Cancel" FontSize="@FontSize" FontName="Calibri"
+            Position="@Position" Left="@CancelButtonLeft" Top=@ButtonTop ClassName="@CancelButtonClassName"
+            Width="@CancelButtonWidth" Text="@CancelButtonText" FontSize="@FontSize" FontName="Calibri"
             ImageUrl="@CancelButtonImageUrl" ClickHandler="@ButtonClicked">
         </ImageButton>
     </div>
