I udpated some Color properties to be colors, not strings

--- a/CalendarComponent.razor
+++ b/CalendarComponent.razor
@@ -139,7 +139,7 @@
 </Styled>
 <Styled @bind-Classname=@DayButtonStyle2>   
     border: 0px;
-    background-color: white;
+    background-color: @DayButtonBackgroundColor.Name;
     font-size: 10px;
     font-weight: bold;
     width: @DayButtonWidthStyle;
