--- a/CheckBoxComponent.razor
+++ b/CheckBoxComponent.razor
@@ -3,7 +3,7 @@
 <Styled @bind-Classname=@Column1Style>
     display: inline-block;
     height: 100%;
-    background-color: @LabelBackgroundColor;
+    background-color: @LabelBackgroundColor.Name;
     color: @LabelColor.Name;
     font-size: @LabelFontSizeStyle;
     font-family: @LabelFontName;
@@ -28,7 +28,7 @@
     z-index: @ZIndex;
 </Styled>
 <Styled @bind-Classname=@CheckBoxStyle>
-    background-color: @BackgroundColor;
+    background-color: @BackgroundColor.Name;
     height: @HeightStyle;
     width: @WidthStyle;
     position: @Position;
@@ -45,7 +45,7 @@
     left: @LeftStyle;
     top: @TopStyle;
     height: @ControlHeightStyle;
-    background-color: @BackgroundColor;
+    background-color: @BackgroundColor.Name;
     z-index: @ZIndex;
     display: @DisplayStyle;
     border-color: @BorderColor.Name;
