--- a/CheckedListBox.razor
+++ b/CheckedListBox.razor
@@ -58,7 +58,7 @@
                     CheckBoxTextX="@CheckBoxTextX" CheckBoxTextY="@CheckBoxTextY"
                     Height="@CheckBoxHeight" Width="@CheckBoxWidth" ControlHeight="@ListItemHeight"
                     ClassName="@ListItemClassName" Text="@item.Text" ExternalId="@item.Id"
-                    BackgroundColor="@ListItemBackgroundColor.Name">
+                    BackgroundColor="@ListItemBackgroundColor">
                 </CheckBoxComponent>
             </div>
         }
