Checking in version 9.17.10, which adds some properties to the grid for BorderWidth and BorderColor and EnableDoubleClick

--- a/Grid.razor
+++ b/Grid.razor
@@ -10,6 +10,8 @@
     position: @Position;
     left: @LeftStyle;
     top: @TopStyle;
+    border-width: @BorderWidthStyle;
+    border-color: @BorderColor.Name;
 </Styled>
 <Styled @bind-Classname=@GridStyle>    
     background-color: @GridBackColor;
