Chedcking in 9.18.3, which updates the Grid and CSS

--- a/Grid.razor
+++ b/Grid.razor
@@ -27,6 +27,7 @@
     border-color: @BorderColor.Name;    
 </Styled>
 <Styled @bind-Classname=@HeaderRowStyle>    
+    sticky: @StickyStyle;
     clear: both;
 </Styled>
 <Styled @bind-Classname=@ContentStyle>
